--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "author": "Eugene Nakoneschniy",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "npm run api & nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "api": "json-server ./api/db.json --port 8080"
   },
   "dependencies": {
     "nuxt": "^2.0.0",
