--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "api": "json-server ./api/db.json --port 8080"
+    "api": "json-server ./api/db.json --port 8080 -m ./node_modules/json-server-auth -r ./api/routes.json"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "bootstrap-vue": "^2.0.0",
-    "bootstrap": "^4.1.3",
+    "@nuxtjs/auth": "^4.8.5",
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
-    "@nuxtjs/dotenv": "^1.4.0"
+    "bootstrap": "^4.1.3",
+    "bootstrap-vue": "^2.0.0",
+    "nuxt": "^2.0.0",
+    "vee-validate": "^3.2.4"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
@@ -27,6 +29,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
+    "json-server-auth": "^1.2.1",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2"
   }
