--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "nuxt": "^2.0.0",
-    "vee-validate": "^3.2.4"
+    "vee-validate": "^3.2.4",
+    "vue-js-modal": "^1.3.33",
+    "vue-toast-notification": "0.0.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
