--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap-vue": "^2.0.0",
     "nuxt": "^2.0.0",
     "vee-validate": "^3.2.4",
+    "vue-i18n": "^8.15.3",
     "vue-js-modal": "^1.3.33",
     "vue-toast-notification": "0.0.3"
   },
